--- a/cleaning_notebooks/2_flag_incidents.ipynb
+++ b/cleaning_notebooks/2_flag_incidents.ipynb
@@ -24,12 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd;\n",
-    "import pyreadr\n",
-    "from matplotlib import pyplot as plt\n",
-    "from pandas.plotting import table\n",
-    "from datetime import datetime\n",
-    "from tabulate import tabulate"
+    "import pandas as pd"
    ]
   },
   {
@@ -1218,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
