updated cleaning to 2023 code

--- a/cleaning_notebooks/1_process_ucr.ipynb
+++ b/cleaning_notebooks/1_process_ucr.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +118,27 @@
        "      <td>anchorage</td>\n",
        "      <td>alaska</td>\n",
        "      <td>AK</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>local police department</td>\n",
+       "      <td>city 250,000 thru 499,999</td>\n",
+       "      <td>39</td>\n",
+       "      <td>285026.0</td>\n",
+       "      <td>no, it is not covered by another agency</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>566.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>519.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AK00101</td>\n",
+       "      <td>AK0010100</td>\n",
+       "      <td>02</td>\n",
+       "      <td>020</td>\n",
+       "      <td>anchorage</td>\n",
+       "      <td>alaska</td>\n",
+       "      <td>AK</td>\n",
        "      <td>2022</td>\n",
        "      <td>local police department</td>\n",
        "      <td>city 250,000 thru 499,999</td>\n",
@@ -131,7 +152,7 @@
        "      <td>536.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>AK00101</td>\n",
        "      <td>AK0010100</td>\n",
        "      <td>02</td>\n",
@@ -151,27 +172,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AK00101</td>\n",
-       "      <td>AK0010100</td>\n",
-       "      <td>02</td>\n",
-       "      <td>020</td>\n",
-       "      <td>anchorage</td>\n",
-       "      <td>alaska</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>local police department</td>\n",
-       "      <td>city 250,000 thru 499,999</td>\n",
-       "      <td>038</td>\n",
-       "      <td>286388.0</td>\n",
-       "      <td>no, it is not covered by another agency</td>\n",
-       "      <td>425.0</td>\n",
-       "      <td>167.0</td>\n",
-       "      <td>592.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>372.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -182,28 +182,28 @@
        "1  AK00101  AK0010100              02              020   anchorage  alaska   \n",
        "2  AK00101  AK0010100              02              020   anchorage  alaska   \n",
        "\n",
-       "  state_abb  year              agency_type           population_group  msa  \\\n",
-       "0        AK  2022  local police department  city 250,000 thru 499,999   38   \n",
-       "1        AK  2021  local police department  city 250,000 thru 499,999   38   \n",
-       "2        AK  2020  local police department  city 250,000 thru 499,999  038   \n",
+       "  state_abb  year              agency_type           population_group msa  \\\n",
+       "0        AK  2023  local police department  city 250,000 thru 499,999  39   \n",
+       "1        AK  2022  local police department  city 250,000 thru 499,999  38   \n",
+       "2        AK  2021  local police department  city 250,000 thru 499,999  38   \n",
        "\n",
        "   population                               covered_by  \\\n",
-       "0    285821.0  no, it is not covered by another agency   \n",
-       "1    286238.0  no, it is not covered by another agency   \n",
-       "2    286388.0  no, it is not covered by another agency   \n",
+       "0    285026.0  no, it is not covered by another agency   \n",
+       "1    285821.0  no, it is not covered by another agency   \n",
+       "2    286238.0  no, it is not covered by another agency   \n",
        "\n",
        "   total_employees_officers  total_employees_civilians  total_employees_total  \\\n",
-       "0                     406.0                      157.0                  563.0   \n",
-       "1                     413.0                      161.0                  574.0   \n",
-       "2                     425.0                      167.0                  592.0   \n",
+       "0                     400.0                      166.0                  566.0   \n",
+       "1                     406.0                      157.0                  563.0   \n",
+       "2                     413.0                      161.0                  574.0   \n",
        "\n",
        "   officers_killed_total  assaults_no_injury_total  \n",
-       "0                    0.0                     536.0  \n",
-       "1                    0.0                       0.0  \n",
-       "2                    0.0                     372.0  "
+       "0                    0.0                     519.0  \n",
+       "1                    0.0                     536.0  \n",
+       "2                    0.0                       0.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
     "    pyreadr\n",
     "    .read_r(\n",
     "        # Using Jacob Kaplan's concatenated files for easier processing\n",
-    "        f\"../data/leoka_yearly_1960_2022.rds\",\n",
+    "        f\"../data/leoka_yearly_1960_2023.rds\",\n",
     "    )\n",
     "    [None]  # Extract the single dataframe from the R data structure\n",
     "    [keepcols]  # Select only the columns we need\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "22033"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -268,8 +268,8 @@
      "output_type": "stream",
      "text": [
       "Sheriff's offices: 3063\n",
-      "Local police departments: 14242\n",
-      "Ratio (police to sheriff): 4.6:1\n"
+      "Local police departments: 14263\n",
+      "Ratio (police to sheriff): 4.7:1\n"
      ]
     }
    ],
@@ -286,23 +286,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentage of sheriff's offices serving >10,000 people: 74.3%\n"
+      "Percentage of sheriff's offices serving >10,000 people: 74.4%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7432211695524339"
+       "0.743547860176413"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -368,14 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created lookup table with 874450 agency-year records\n"
+      "Created lookup table with 891774 agency-year records\n"
      ]
     },
     {
@@ -473,7 +473,7 @@
        "4  city 50,000 thru 99,999  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,14 +516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created staffing data with 12040 agency-type-year records\n"
+      "Created staffing data with 12255 agency-type-year records\n"
      ]
     },
     {
@@ -676,7 +676,7 @@
        "9          0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -777,6 +777,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>WV</td>\n",
+       "      <td>577145.0</td>\n",
+       "      <td>1192766.0</td>\n",
+       "      <td>1769911.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>67.4</td>\n",
+       "      <td>32.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>2022</td>\n",
        "      <td>WV</td>\n",
        "      <td>579590.0</td>\n",
@@ -787,7 +798,7 @@
        "      <td>32.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>2020</td>\n",
        "      <td>WV</td>\n",
        "      <td>590854.0</td>\n",
@@ -797,17 +808,6 @@
        "      <td>67.1</td>\n",
        "      <td>32.9</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>WV</td>\n",
-       "      <td>597473.0</td>\n",
-       "      <td>1205093.0</td>\n",
-       "      <td>1802566.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>66.9</td>\n",
-       "      <td>33.1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -816,19 +816,19 @@
        "   year state_abb  local police department  sheriffs office  total_population  \\\n",
        "0  1971        SC                 842786.0        1823483.0         2683742.0   \n",
        "1  2021        WV                 576898.0        1207480.0         1784378.0   \n",
-       "2  2022        WV                 579590.0        1195365.0         1774955.0   \n",
-       "3  2020        WV                 590854.0        1205328.0         1796182.0   \n",
-       "4  2019        WV                 597473.0        1205093.0         1802566.0   \n",
+       "2  2023        WV                 577145.0        1192766.0         1769911.0   \n",
+       "3  2022        WV                 579590.0        1195365.0         1774955.0   \n",
+       "4  2020        WV                 590854.0        1205328.0         1796182.0   \n",
        "\n",
        "   other_pop  percent_sheriff_pop  percent_police_pop  \n",
        "0    17473.0                 67.9                31.4  \n",
        "1        0.0                 67.7                32.3  \n",
-       "2        0.0                 67.3                32.7  \n",
-       "3        0.0                 67.1                32.9  \n",
-       "4        0.0                 66.9                33.1  "
+       "2        0.0                 67.4                32.6  \n",
+       "3        0.0                 67.3                32.7  \n",
+       "4        0.0                 67.1                32.9  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,14 +906,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded arrests data with 1082077 agency-year records\n"
+      "Loaded arrests data with 1111562 agency-year records\n"
      ]
     },
     {
@@ -952,10 +952,10 @@
        "      <td>AK00101</td>\n",
        "      <td>AK0010100</td>\n",
        "      <td>AK</td>\n",
-       "      <td>2022.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>local police department</td>\n",
-       "      <td>15517.0</td>\n",
+       "      <td>15773.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -963,13 +963,13 @@
       ],
       "text/plain": [
        "       ori       ori9 state_abb    year  number_of_months_missing  \\\n",
-       "0  AK00101  AK0010100        AK  2022.0                       0.0   \n",
+       "0  AK00101  AK0010100        AK  2023.0                       NaN   \n",
        "\n",
        "               agency_type  actual_all_crimes  \n",
-       "0  local police department            15517.0  "
+       "0  local police department            15773.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +986,7 @@
     "    pyreadr\n",
     "    .read_r(\n",
     "        # Using Jacob Kaplan's concatenated files for easier processing\n",
-    "        f\"../data/offenses_known_yearly_1960_2022.rds\",\n",
+    "        f\"../data/offenses_known_yearly_1960_2023.rds\",\n",
     "    )\n",
     "    [None]  # Extract the single dataframe from the R data structure\n",
     "    [usecols]  # Select only the columns we need\n",
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
        "4         498924.0                3880.0                       77492.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,14 +1137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created state-level arrests data with 3204 state-year records\n"
+      "Created state-level arrests data with 3255 state-year records\n"
      ]
     },
     {
@@ -1229,7 +1229,7 @@
        "4  1960        CA                 410865.0         123944.0    0.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
        "1964                3591606.0         498924.0    0.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,27 +1384,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # get a subset of medium sized agencies\n",
-    "# medium_agencies = (\n",
-    "#     leoka\n",
-    "#     .loc[lambda x: x.population > 10000]\n",
-    "#     .loc[lambda x: x.population < 100000]\n",
-    "#     .loc[lambda x: x.agency_type.isin([\"sheriffs office\", \"local police department\"])]\n",
-    "#     [[\"year\", \"ori\", \"population\"]]\n",
-    "# )\n",
-    "\n",
-    "# medium_agencies.head()\n",
-    "\n",
-    "# # population for sheriffs and local police departments with populations between 10,000 and 100,000\n",
-    "# medium_agencies.to_csv(\"../outputs/medium_agencies.csv\", index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1418,7 +1397,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "sheriffs-public-py3.12",
    "language": "python",
    "name": "python3"
   },
