--- a/cleaning_notebooks/2_flag_incidents.ipynb
+++ b/cleaning_notebooks/2_flag_incidents.ipynb
@@ -38,7 +38,7 @@
      "output_type": "stream",
      "text": [
       "Sheriff ORI codes: 3063\n",
-      "Police ORI codes: 14242\n",
+      "Police ORI codes: 14263\n",
       "Sample sheriff ORI: AL0010000\n",
       "Sample police ORI: AK0010100\n"
      ]
@@ -547,8 +547,8 @@
    "source": [
     "## State-level analysis of incidents by agency type\n",
     "\n",
-    "# This section analyzes incidents by state to understand geographic patterns\n",
-    "# in sheriff vs police involvement in lethal force incidents"
+    "This section analyzes incidents by state to understand geographic patterns\n",
+    "in sheriff vs police involvement in lethal force incidents"
    ]
   },
   {
@@ -862,7 +862,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded staffing data with 12040 records\n",
+      "Loaded staffing data with 12255 records\n",
       "Agency types in staffing data: ['local police department' 'state law enforcement agency'\n",
       " 'sheriffs office' 'special jurisdiction' 'constable/marshal' 'federal']\n"
      ]
@@ -990,11 +990,11 @@
       "Created staffing data for 51 states\n",
       "States with highest percentage of sheriff staff:\n",
       "state_abb  pct_sheriff  sheriffs office  local police department\n",
-      "       LA     0.624625           9796.0                   5717.0\n",
-      "       MT     0.557009           1959.0                   1166.0\n",
-      "       ID     0.541228           3085.0                   2083.0\n",
-      "       FL     0.537109          36546.0                  24196.0\n",
-      "       WY     0.494687           1350.0                    975.0\n"
+      "       LA     0.643781          12837.0                   6531.0\n",
+      "       MT     0.555652           1922.0                   1177.0\n",
+      "       FL     0.531603          39959.0                  29102.0\n",
+      "       ID     0.530961           2984.0                   2066.0\n",
+      "       SD     0.518571           1466.0                   1158.0\n"
      ]
     },
     {
@@ -1031,52 +1031,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LA</td>\n",
-       "      <td>15683.0</td>\n",
-       "      <td>5717.0</td>\n",
-       "      <td>9796.0</td>\n",
-       "      <td>0.624625</td>\n",
-       "      <td>0.364535</td>\n",
-       "      <td>0.010840</td>\n",
+       "      <td>19940.0</td>\n",
+       "      <td>6531.0</td>\n",
+       "      <td>12837.0</td>\n",
+       "      <td>0.643781</td>\n",
+       "      <td>0.327533</td>\n",
+       "      <td>0.028686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>MT</td>\n",
-       "      <td>3517.0</td>\n",
-       "      <td>1166.0</td>\n",
-       "      <td>1959.0</td>\n",
-       "      <td>0.557009</td>\n",
-       "      <td>0.331533</td>\n",
-       "      <td>0.111459</td>\n",
+       "      <td>3459.0</td>\n",
+       "      <td>1177.0</td>\n",
+       "      <td>1922.0</td>\n",
+       "      <td>0.555652</td>\n",
+       "      <td>0.340272</td>\n",
+       "      <td>0.104076</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ID</td>\n",
-       "      <td>5700.0</td>\n",
-       "      <td>2083.0</td>\n",
-       "      <td>3085.0</td>\n",
-       "      <td>0.541228</td>\n",
-       "      <td>0.365439</td>\n",
-       "      <td>0.093333</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>75167.0</td>\n",
+       "      <td>29102.0</td>\n",
+       "      <td>39959.0</td>\n",
+       "      <td>0.531603</td>\n",
+       "      <td>0.387165</td>\n",
+       "      <td>0.081232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>FL</td>\n",
-       "      <td>68042.0</td>\n",
-       "      <td>24196.0</td>\n",
-       "      <td>36546.0</td>\n",
-       "      <td>0.537109</td>\n",
-       "      <td>0.355604</td>\n",
-       "      <td>0.107287</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>5620.0</td>\n",
+       "      <td>2066.0</td>\n",
+       "      <td>2984.0</td>\n",
+       "      <td>0.530961</td>\n",
+       "      <td>0.367616</td>\n",
+       "      <td>0.101423</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>WY</td>\n",
-       "      <td>2729.0</td>\n",
-       "      <td>975.0</td>\n",
-       "      <td>1350.0</td>\n",
-       "      <td>0.494687</td>\n",
-       "      <td>0.357274</td>\n",
-       "      <td>0.148040</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>2827.0</td>\n",
+       "      <td>1158.0</td>\n",
+       "      <td>1466.0</td>\n",
+       "      <td>0.518571</td>\n",
+       "      <td>0.409622</td>\n",
+       "      <td>0.071808</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1084,18 +1084,18 @@
       ],
       "text/plain": [
        "  state_abb  total_agency_staff  local police department  sheriffs office  \\\n",
-       "0        LA             15683.0                   5717.0           9796.0   \n",
-       "1        MT              3517.0                   1166.0           1959.0   \n",
-       "2        ID              5700.0                   2083.0           3085.0   \n",
-       "3        FL             68042.0                  24196.0          36546.0   \n",
-       "4        WY              2729.0                    975.0           1350.0   \n",
+       "0        LA             19940.0                   6531.0          12837.0   \n",
+       "1        MT              3459.0                   1177.0           1922.0   \n",
+       "2        FL             75167.0                  29102.0          39959.0   \n",
+       "3        ID              5620.0                   2066.0           2984.0   \n",
+       "4        SD              2827.0                   1158.0           1466.0   \n",
        "\n",
        "   pct_sheriff  pct_local_police  pct_other  \n",
-       "0     0.624625          0.364535   0.010840  \n",
-       "1     0.557009          0.331533   0.111459  \n",
-       "2     0.541228          0.365439   0.093333  \n",
-       "3     0.537109          0.355604   0.107287  \n",
-       "4     0.494687          0.357274   0.148040  "
+       "0     0.643781          0.327533   0.028686  \n",
+       "1     0.555652          0.340272   0.104076  \n",
+       "2     0.531603          0.387165   0.081232  \n",
+       "3     0.530961          0.367616   0.101423  \n",
+       "4     0.518571          0.409622   0.071808  "
       ]
      },
      "execution_count": 10,
@@ -1115,7 +1115,7 @@
     "\n",
     "staff_by_state = (\n",
     "    agency_staff\n",
-    "    .loc[ lambda x: x[\"year\"] == 2022 ]  # Use most recent complete year\n",
+    "    .loc[ lambda x: x[\"year\"] == 2023 ]  # Use most recent complete year\n",
     "    .groupby(\n",
     "        [\"agency_type\", \"state_abb\"]\n",
     "    )\n",
@@ -1175,22 +1175,23 @@
       "\n",
       "States with significant sheriff presence (>40% of staff) and their incident patterns:\n",
       "state  pct_sheriff  total_incidents  sheriff_incidents  pct_sheriff_incidents\n",
-      "   LA     0.624625              NaN                NaN                    NaN\n",
-      "   MT     0.557009              NaN                NaN                    NaN\n",
-      "   ID     0.541228              NaN                NaN                    NaN\n",
-      "   FL     0.537109              NaN                NaN                    NaN\n",
-      "   WY     0.494687              NaN                NaN                    NaN\n",
-      "   SD     0.475748              NaN                NaN                    NaN\n",
-      "   SC     0.459994              NaN                NaN                    NaN\n",
-      "   GA     0.452834              NaN                NaN                    NaN\n",
-      "   MN     0.448446              NaN                NaN                    NaN\n",
-      "   IA     0.444973              NaN                NaN                    NaN\n",
-      "   MS     0.441617              NaN                NaN                    NaN\n",
-      "   CA     0.438111              NaN                NaN                    NaN\n",
-      "   TN     0.420464              NaN                NaN                    NaN\n",
-      "   NC     0.418379              NaN                NaN                    NaN\n",
-      "   OR     0.413356              NaN                NaN                    NaN\n",
-      "   WI     0.407105              NaN                NaN                    NaN\n"
+      "   LA     0.643781              NaN                NaN                    NaN\n",
+      "   MT     0.555652              NaN                NaN                    NaN\n",
+      "   FL     0.531603              NaN                NaN                    NaN\n",
+      "   ID     0.530961              NaN                NaN                    NaN\n",
+      "   SD     0.518571              NaN                NaN                    NaN\n",
+      "   WY     0.499266              NaN                NaN                    NaN\n",
+      "   MN     0.456055              NaN                NaN                    NaN\n",
+      "   IA     0.452747              NaN                NaN                    NaN\n",
+      "   SC     0.452444              NaN                NaN                    NaN\n",
+      "   MS     0.445872              NaN                NaN                    NaN\n",
+      "   GA     0.443874              NaN                NaN                    NaN\n",
+      "   CA     0.439943              NaN                NaN                    NaN\n",
+      "   NC     0.425629              NaN                NaN                    NaN\n",
+      "   ND     0.423987              NaN                NaN                    NaN\n",
+      "   TN     0.418260              NaN                NaN                    NaN\n",
+      "   WI     0.417368              NaN                NaN                    NaN\n",
+      "   OR     0.409198              NaN                NaN                    NaN\n"
      ]
     },
     {
@@ -1235,12 +1236,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LA</td>\n",
-       "      <td>15683.0</td>\n",
-       "      <td>5717.0</td>\n",
-       "      <td>9796.0</td>\n",
-       "      <td>0.624625</td>\n",
-       "      <td>0.364535</td>\n",
-       "      <td>0.010840</td>\n",
+       "      <td>19940.0</td>\n",
+       "      <td>6531.0</td>\n",
+       "      <td>12837.0</td>\n",
+       "      <td>0.643781</td>\n",
+       "      <td>0.327533</td>\n",
+       "      <td>0.028686</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1253,12 +1254,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>MT</td>\n",
-       "      <td>3517.0</td>\n",
-       "      <td>1166.0</td>\n",
-       "      <td>1959.0</td>\n",
-       "      <td>0.557009</td>\n",
-       "      <td>0.331533</td>\n",
-       "      <td>0.111459</td>\n",
+       "      <td>3459.0</td>\n",
+       "      <td>1177.0</td>\n",
+       "      <td>1922.0</td>\n",
+       "      <td>0.555652</td>\n",
+       "      <td>0.340272</td>\n",
+       "      <td>0.104076</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1270,13 +1271,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ID</td>\n",
-       "      <td>5700.0</td>\n",
-       "      <td>2083.0</td>\n",
-       "      <td>3085.0</td>\n",
-       "      <td>0.541228</td>\n",
-       "      <td>0.365439</td>\n",
-       "      <td>0.093333</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>75167.0</td>\n",
+       "      <td>29102.0</td>\n",
+       "      <td>39959.0</td>\n",
+       "      <td>0.531603</td>\n",
+       "      <td>0.387165</td>\n",
+       "      <td>0.081232</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1288,13 +1289,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>FL</td>\n",
-       "      <td>68042.0</td>\n",
-       "      <td>24196.0</td>\n",
-       "      <td>36546.0</td>\n",
-       "      <td>0.537109</td>\n",
-       "      <td>0.355604</td>\n",
-       "      <td>0.107287</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>5620.0</td>\n",
+       "      <td>2066.0</td>\n",
+       "      <td>2984.0</td>\n",
+       "      <td>0.530961</td>\n",
+       "      <td>0.367616</td>\n",
+       "      <td>0.101423</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1306,13 +1307,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>WY</td>\n",
-       "      <td>2729.0</td>\n",
-       "      <td>975.0</td>\n",
-       "      <td>1350.0</td>\n",
-       "      <td>0.494687</td>\n",
-       "      <td>0.357274</td>\n",
-       "      <td>0.148040</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>2827.0</td>\n",
+       "      <td>1158.0</td>\n",
+       "      <td>1466.0</td>\n",
+       "      <td>0.518571</td>\n",
+       "      <td>0.409622</td>\n",
+       "      <td>0.071808</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1328,18 +1329,18 @@
       ],
       "text/plain": [
        "  state  total_agency_staff  local police department  sheriffs office  \\\n",
-       "0    LA             15683.0                   5717.0           9796.0   \n",
-       "1    MT              3517.0                   1166.0           1959.0   \n",
-       "2    ID              5700.0                   2083.0           3085.0   \n",
-       "3    FL             68042.0                  24196.0          36546.0   \n",
-       "4    WY              2729.0                    975.0           1350.0   \n",
+       "0    LA             19940.0                   6531.0          12837.0   \n",
+       "1    MT              3459.0                   1177.0           1922.0   \n",
+       "2    FL             75167.0                  29102.0          39959.0   \n",
+       "3    ID              5620.0                   2066.0           2984.0   \n",
+       "4    SD              2827.0                   1158.0           1466.0   \n",
        "\n",
        "   pct_sheriff  pct_local_police  pct_other  year  total_incidents  \\\n",
-       "0     0.624625          0.364535   0.010840   NaN              NaN   \n",
-       "1     0.557009          0.331533   0.111459   NaN              NaN   \n",
-       "2     0.541228          0.365439   0.093333   NaN              NaN   \n",
-       "3     0.537109          0.355604   0.107287   NaN              NaN   \n",
-       "4     0.494687          0.357274   0.148040   NaN              NaN   \n",
+       "0     0.643781          0.327533   0.028686   NaN              NaN   \n",
+       "1     0.555652          0.340272   0.104076   NaN              NaN   \n",
+       "2     0.531603          0.387165   0.081232   NaN              NaN   \n",
+       "3     0.530961          0.367616   0.101423   NaN              NaN   \n",
+       "4     0.518571          0.409622   0.071808   NaN              NaN   \n",
        "\n",
        "   sheriff_incidents  police_incidents  other_incidents  \\\n",
        "0                NaN               NaN              NaN   \n",
@@ -1373,7 +1374,7 @@
     "combined_states = (\n",
     "    staff_by_state.rename( columns = {\"state_abb\": \"state\"})  # Match column names\n",
     "    .merge(\n",
-    "        incidents_by_state.loc[ lambda x: x[\"year\"] == 2022 ],  # Use 2022 incident data\n",
+    "        incidents_by_state.loc[ lambda x: x[\"year\"] == 2023 ],  # Use 2023 incident data\n",
     "        on = \"state\",\n",
     "        how = \"left\"  # Keep all states, even those with no incidents\n",
     "    )\n",
@@ -1414,7 +1415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "sheriffs-public-py3.12",
    "language": "python",
    "name": "python3"
   },
